# boilerplate-fastapi

./: .env  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
app/: database.py  deps.py  gunicorn_conf.py  main.py
app/api/: health.py
app/core/: config.py  logging.py  version.py
tests/: test_boilerplate.py
