[tool.poetry]
name = "boilerplate-fastapi"
version = "0.1.0"
description = ""
authors = ["Blaine Luszcak <bluszcak44@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.62.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
uvicorn = "^0.13.0"
structlog = "^20.1.0"
gunicorn = "^20.0.4"
sqlalchemy = "^1.3.20"
mockito = "^1.2.2"
urllib3 = "^1.26.2"
pymysql = "^0.10.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.15.0"
pytest-dotenv = "^0.5.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
